<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="note_name">Note name</string>
    <string name="type_note_name">Введите название заметки</string>
    <string name="note">Заметка....</string>
    <string name="save">Сохранить</string>
    <string name="search">search</string>
    <string name="settings">Settings</string>
    <string name="choose">Choose</string>
    <string name="sort">Sort</string>
    <string name="by_date">By date</string>
    <string name="by_name">By name</string>
    <string name="settings_fragment_text">Здесь должны были быть настройки, но их нет(</string>
    <string name="settings_fragment_text_2">Спасибо, что зашли! Вы лапочка!</string>
    <string name="kek">kek</string>
    <string name="fragment_about_text">Даже и сказать нечего об этом приложении…</string>
    <string name="nav_header_subtitle">sentsov13@gmail.com</string>
    <string name="nav_header_desc">Как-то так</string>
    <string name="nav_header_title">SentsovSA</string>
    <string name="about">About</string>
    <string name="add">add</string>
    <string name="home">Home</string>
</resources>