<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_choose"
        android:orderInCategory="100"
        android:title="@string/choose" />

    <item
        android:id="@+id/sort"
        android:title="@string/sort" >
        <menu>
            <item
                android:id="@+id/action_sort_by_date"
                android:orderInCategory="100"
                android:title="@string/by_date" />

            <item
                android:id="@+id/action_sort_by_name"
                android:orderInCategory="100"
                android:title="@string/by_name" />
        </menu>
    </item>
</menu>