<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/noteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_note_name"
        android:autofillHints="@string/note_name"
        android:labelFor="@+id/noteName"
        android:inputType="text"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:autofillHints="@string/note"
        android:labelFor="@+id/note"
        android:inputType="text"/>

</LinearLayout>